# Akashi

./: CMakeLists.txt
src/: acl_roles_handler.cpp  acl_roles_handler.h  advertiser.cpp  advertiser.h  akashidefs.cpp  akashidefs.h  akashiutils.h  aoclient.cpp  aoclient.h  area_data.cpp  area_data.h  command_extension.cpp  command_extension.h  config_manager.cpp  config_manager.h  crypto_helper.h  data_types.h  db_manager.cpp  db_manager.h  discord.cpp  discord.h  main.cpp  music_manager.cpp  music_manager.h  packets.cpp  playerstateobserver.cpp  playerstateobserver.h  server.cpp  server.h  testimony_recorder.cpp
src/commands/: area.cpp  authentication.cpp  casing.cpp  command_helper.cpp  messaging.cpp  moderation.cpp  music.cpp  roleplay.cpp
src/logger/: u_logger.cpp  u_logger.h  writer_full.cpp  writer_full.h  writer_modcall.cpp  writer_modcall.h
src/network/: aopacket.cpp  aopacket.h  network_socket.cpp  network_socket.h
src/packet/: packet_askchaa.cpp  packet_askchaa.h  packet_casea.cpp  packet_casea.h  packet_cc.cpp  packet_cc.h  packet_ch.cpp  packet_ch.h  packet_ct.cpp  packet_ct.h  packet_de.cpp  packet_de.h  packet_ee.cpp  packet_ee.h  packet_factory.cpp  packet_factory.h  packet_generic.cpp  packet_generic.h  packet_hi.cpp  packet_hi.h  packet_hp.cpp  packet_hp.h  packet_id.cpp  packet_id.h  packet_info.h  packet_ma.cpp  packet_ma.h  packet_mc.cpp  packet_mc.h  packet_ms.cpp  packet_ms.h  packet_pe.cpp  packet_pe.h  packet_pr.cpp  packet_pr.h  packet_pw.cpp  packet_pw.h  packet_rc.cpp  packet_rc.h  packet_rd.cpp  (+9 more)
tests/: CMakeLists.txt  test_acl_roles_handler.cpp  test_akashi_utils.cpp  test_aopacket.cpp  test_area.cpp  test_config_manager.cpp  test_crypto.cpp  test_music_manager.cpp
